# jelly_cad_installed

./: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  cache_vcpkg.yml  ci.yml  ros2jazzy.yml
